comments added to HTMl and CSS to allow changes to be easily noticed

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
+    <!-- 'div' renamed to 'header' and class-name removed -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- 'div' renamed to 'nav' -->
         <nav>
             <ul>
                 <li>
@@ -24,8 +26,11 @@
             </ul>
         </nav>
     </header>
+    <!-- 'div' renamed to 'img'-->
     <img class="hero"></img>
+    <!-- 'div' renamed to 'section'-->
     <section class="content">
+        <!-- next three nested 'divs' renamed to 'article'-->
         <article class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -54,7 +59,9 @@
             </p>
         </article>
     </section>
+    <!-- 'div' renamed to 'section'-->
     <section class="benefits">
+        <!-- next three nested 'div's changed to 'article'-->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -80,6 +87,7 @@
             </p>
         </article>
     </section>
+    <!-- 'div' renamed to 'footer' and footer-class removed-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
